<resources>
    <string name="app_name">MyMovies</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="remove_from_favourite">Remove from Favourite</string>
    <string name="item_main">Main</string>
    <string name="item_favourite">Favourite</string>
    <string name="start_trailer">Start trailer</string>
    <string name="text_replace">TextView</string>


    <string name="label_title">Title:</string>
    <string name="label_original_title">Original title:</string>
    <string name="label_rating">Rating:</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_description">Description:</string>
    <string name="favourite_empty">EMPTY</string>
</resources>
